рабочий запуск Go API с Swagger
